--- a/docs/0. Config-project.md
+++ b/docs/0. Config-project.md
@@ -33,7 +33,7 @@ O vía la interfaz gráfica de Anaconda Navigator
 ```bash
 conda activate nombre_del_entorno
 # Ejemplo:
-conda activate mlops-fisi
+conda activate mlops-utec
 ```
 
 ### Verificar entorno activo
@@ -41,7 +41,7 @@ conda activate mlops-fisi
 Una vez activado, verás el nombre del entorno en el prompt:
 
 ```bash
-(mlops-fisi) usuario@mac:~$
+(mlops-utec) usuario@mac:~$
 ```
 
 ## Desactivar entorno
@@ -75,7 +75,7 @@ conda env remove -n nombre_del_entorno
 ## Cookiecutter para proyectos MLOps
 
 ```bash
-conda activate mlops-fisi
+conda activate mlops-utec
 pip install cookiecutter
 cookiecutter https://github.com/khuyentran1401/data-science-template
 ```
@@ -97,8 +97,8 @@ cd mlops-lab
 ### Crear y activar entorno virtual con conda
 
 ```bash
-conda create -n mlops-fisi python=3.11
-conda activate mlops-fisi
+conda create -n mlops-utec python=3.11
+conda activate mlops-utec
 ```
 
 ### Instalar dependencias
